--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clean; tsc; npm run copy-views; npm run copy-public",
-    "clean": "shx rm -rf dist",
-    "copy-views": "shx cp -r src/views/ dist",
-    "copy-public": "shx cp -r src/public/ dist/public",
+    "clean": "rm -rf dist",
+    "copy-views": "cp -r src/views/ dist",
+    "copy-public": "cp -r src/public/ dist/public",
     "start": "node dist/client.js"
   },
   "keywords": [],
