--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clean; tsc",
-    "clean": "shx rm -rf dist",
+    "clean": "rm -rf dist",
     "start": "node dist/webapi.js"
   },
   "keywords": [],
